# media-xray

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: ci.yml
analysis/: CMakeLists.txt  README.md  diagnostics.h  playlist_consistency_checker.c  playlist_consistency_checker.h  segment_timing_validator.c  segment_timing_validator.h  variant_alignment_analyzer.c  variant_alignment_analyzer.h
cli/: CMakeLists.txt  cli.cpp  cli.h  main.cpp
core/: CMakeLists.txt  README.md  errors.h  log.cpp  log.h  version.cpp  version.h
core/diagnostics/: diagnostics.h  severity.h
core/hls/: hls_invariants.c  hls_invariants.h  hls_ports.h  hls_types.h
core/media/: media_types.h  timeline.h
docs/: dev.md
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  README.md  test_assert.h  test_basic.cpp
tests/analysis/: test_segement_timing_validator.c
tests/core/: test_hls_invariants.c
